Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18206

Neko98 infinite "err: Message WM_PAINT count 1 Internal Paint Set? FALSE" when "Always on top" is chosen

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS
    • None

    Description

      1. Install Neko98 from RAPPS.
      2. Use the config program to enable Always on top.
      3. Run Neko98.exe
        Now, your cat just stays there and do nothing, and CPU is 100%.
        Log is attached.
        Note that there are thousands of same lines below it, and I deleted them.

      Attachments

        1. neko_painting_error-01.png
          neko_painting_error-01.png
          114 kB
        2. neko.log
          47 kB
        3. rapps-redraw-fix.patch
          0.6 kB
        4. ReactOS-16-756.webm
          668 kB

        Issue Links

          Activity

            People

              DougLyons DougLyons
              silvicky silvicky
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: